# ems-agent-flow

./: .env.example  .gitignore  CHAT_API_README.md  README.md  check_tools.py  check_tools2.py  claude_desktop_config.json  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1  test_chat_api.py  test_mcp.py  test_proposal.json  test_proposal.py  test_proposal_simple.py  test_tool_call.py  tmp_test_agent.py  tmp_test_path.py  verify_chat_api.py  verify_fs.py
Mark/: COMMAND_EXECUTION_AGENT_REPORT.md  COMMAND_EXECUTION_USAGE.md  FILE_ORGANIZATION_SUMMARY.md  README.md  SERVER_RESTART_GUIDE.md  架构图.md
docs/: CODE_REVIEW_2026_03_29.md  langchain-1.0-tutorial.md  redis-basics.md
src/: main.py
src/agents/: __init__.py
src/agents/config/: settings.py
src/agents/core/: __init__.py  domain_agent.py  factory.py  registry.py  resilience.py  workspace.py
src/agents/demo/: multi_agent_demo.py  power_agent_demo.py  simple_agent.py
src/agents/domains/: __init__.py
src/common/: __init__.py  config.py  database.py
src/demo/: fastapi_syntax_demo.py
src/influxApi/: client.py  demo.py
src/mcp/: README.md  server.py
src/milvus/: __init__.py  client.py  demo.py  enterprise_demo.py
src/projectApi/: db.py  device_router.py  init_db.py  models_business.py  models_learning.py  mysql_config.py  router.py  schemas.py  service.py
temp_uploads/: doc_hashes.json  nodes_cache.json
tests/: README.md  diagnose_skills_issue.py  server_restart_guide.py  test_command_execution.py  test_command_execution_interactive.py  test_fix_verification.py  test_mcp.py
workspaces/123/: user_profile.json
workspaces/default_user/: user_profile.json
workspaces/user_001/: user_profile.json
(+66 files in other folders)
