[project]
name = "fastapi-ems"
version = "1.0.0"
description = "基于 FastAPI 的企业管理系统框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents==0.4.12",
    "langchain-openai>=1.1.11",
    "pydantic-settings>=2.13.1",
    "tavily-python>=0.7.23",
    # FastAPI 核心依赖
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "sqlalchemy-utils>=0.41.0",
    "fastcrud>=0.21.0",
    "aiosqlite>=0.19.0",
    "aiomysql>=0.2.0",
    # 工具
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pypsa>=1.1.2",
    "highspy>=1.13.1",
    "mcp>=1.26.0",
    "fastmcp>=3.1.1",
    "influxdb-client[async]>=1.40.0",
    "aiohttp>=3.9.0",
    "pymilvus>=2.4.0",
    "llama-index-retrievers-bm25>=0.7.1",
    "jieba>=0.42.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "crlf"

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

